Fix background colour to black behind embeds

--- a/src/app/common/components/rich-embed/rich-embed.scss
+++ b/src/app/common/components/rich-embed/rich-embed.scss
@@ -54,6 +54,10 @@ minds-rich-embed {
     padding-bottom: 56.25%; /* 16:9 */
     height: 0;
 
+    @include m-theme() {
+      background-color: themed($m-black-always);
+    }
+
     > iframe {
       position: absolute;
       top: 0;
@@ -70,7 +74,7 @@ minds-rich-embed {
     height: 0;
 
     @include m-theme() {
-      background-color: themed($m-bgColor--secondary);
+      background-color: themed($m-black-always);
     }
 
     > iframe {
@@ -79,6 +83,12 @@ minds-rich-embed {
       left: 0;
       width: 100%;
       height: 100%;
+    }
+  }
+
+  .m-rich-embed-audio-iframe {
+    @include m-theme() {
+      background-color: themed($m-black-always);
     }
   }
 
